--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -55,9 +55,10 @@ jobs:
     - name: Setup Java JDK
       env:
         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-      uses: actions/setup-java@v1.3.0
+      uses: actions/setup-java@2.3.0
       with:
-        java-version: 16
+        java-version: 17
+        distribution: adopt-hotspot
 
     # Autobuild attempts to build any compiled languages  (C/C++, C#, or Java).
     # If this step fails, then you should remove it and run the build manually (see below)
