--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -55,7 +55,7 @@ jobs:
     - name: Setup Java JDK
       env:
         ACTIONS_ALLOW_UNSECURE_COMMANDS: true
-      uses: actions/setup-java@2.3.0
+      uses: actions/setup-java@v2.3.0
       with:
         java-version: 17
         distribution: adopt-hotspot
