--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,36 @@
 
     <build>
         <plugins>
+              <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>.code-intelligence</source>
+                ...
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+              <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.12.4</version>
+        <configuration>
+          <additionalClasspathElements>
+            <additionalClasspathElement>.code-intelligence/fuzz_targets</additionalClasspathElement>
+          </additionalClasspathElements>
+        </configuration>
+      </plugin>
             <plugin>
                 <artifactId>maven-assembly-plugin</artifactId>
                 <configuration>
