--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
      fail-fast: false
      matrix:
        sanitizer:
-         coverage
+         - coverage
    steps:
    - name: Build Fuzzers $({{ matrix.sanitizer }})
      id: build
