--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,10 @@
 name: CIFuzz
 on:
   push:
-    branches: [ master ]
+    branches: [ java15 ]
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [ master ]
+    branches: [ java15 ]
   schedule:
     - cron: '43 11 * * 2'
 permissions: read-all
