--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,11 @@ jobs:
      matrix:
        sanitizer:
          - address
+       mode:
+         - batch
+         - coverage
    steps:
-   - name: Build Fuzzers $({{ matrix.sanitizer }})
+   - name: Build Fuzzers (${{ matrix.sanitizer }})
      id: build
      uses: google/clusterfuzzlite/actions/build_fuzzers@v1
      with:
@@ -30,7 +33,7 @@ jobs:
        github-token: ${{ secrets.GITHUB_TOKEN }}
        language: jvm
        fuzz-seconds: 300
-       mode: address
+       mode: ${{ matrix.mode }}
        sanitizer: ${{ matrix.sanitizer }}
        storage-repo: https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/johannes-riecken/pacman-java-storage.git
        storage-repo-branch: main   # Optional. Defaults to "main"
