--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,28 +13,22 @@ jobs:
    runs-on: ubuntu-latest
    strategy:
      fail-fast: false
-     matrix:
-       sanitizer:
-         - address
-       mode:
-         - batch
-         - coverage
    steps:
-   - name: Build Fuzzers (${{ matrix.sanitizer }})
+   - name: Build Fuzzers
      id: build
      uses: google/clusterfuzzlite/actions/build_fuzzers@v1
      with:
        language: jvm
-       sanitizer: ${{ matrix.sanitizer }}
-   - name: Run Fuzzers (${{ matrix.sanitizer }})
+       sanitizer: address
+   - name: Run Fuzzers (batch)
      id: run
      uses: google/clusterfuzzlite/actions/run_fuzzers@v1
      with:
        github-token: ${{ secrets.GITHUB_TOKEN }}
        language: jvm
        fuzz-seconds: 300
-       mode: ${{ matrix.mode }}
-       sanitizer: ${{ matrix.sanitizer }}
+       mode: batch
+       sanitizer: address
        storage-repo: https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/johannes-riecken/pacman-java-storage.git
        storage-repo-branch: main   # Optional. Defaults to "main"
        storage-repo-branch-coverage: gh-pages  # Optional. Defaults to "gh-pages".
