--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,3 +32,15 @@ jobs:
        storage-repo: https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/johannes-riecken/pacman-java-storage.git
        storage-repo-branch: main   # Optional. Defaults to "main"
        storage-repo-branch-coverage: gh-pages  # Optional. Defaults to "gh-pages".
+   - name: Run Fuzzers (coverage)
+     id: run
+     uses: google/clusterfuzzlite/actions/run_fuzzers@v1
+     with:
+       github-token: ${{ secrets.GITHUB_TOKEN }}
+       language: jvm
+       fuzz-seconds: 300
+       mode: coverage
+       sanitizer: address
+       storage-repo: https://${{ secrets.PERSONAL_ACCESS_TOKEN }}@github.com/johannes-riecken/pacman-java-storage.git
+       storage-repo-branch: main   # Optional. Defaults to "main"
+       storage-repo-branch-coverage: gh-pages  # Optional. Defaults to "gh-pages".
