Temporarily add codeql-analysis.yml

--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -71,3 +71,25 @@ jobs:
       #   make release
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v2
+        with:
+          upload: False
+          output: sarif-results
+
+      - name: filter-sarif
+        uses: advanced-security/filter-sarif@main
+        with:
+          input: sarif-results/java.sarif
+          output: sarif-results/java.sarif
+
+      - name: Upload SARIF
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: sarif-results/java.sarif
+
+      - name: Upload loc as a build artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: sarif-results
+          path: sarif-results
+          retention-days: 1
+
